# agheine

./: README.md  enviorenment.yml  hello world.ipynb  histplot_settings.ini  requirements.txt  settings.ini
2024/Swift/: DevNotebook1.ipynb  Swift Data Analysis.ipynb  swift_data_analysis.ipynb
2024/Swift/demo/: export.csv  test export 1.csv  test export 2.csv  test export 3.csv
2024/Swift/demo/swift demo data/: export2.csv
2024/SwiftTools/: __init__.py  gui.py
Fiji scipts/2024-07-09 Kara/: macroLoad.ijm  readme.md
HistPlot/: __init__.py  gui.py
Swift/: Swift Data Analysis.ipynb
Tutorials/: readme.md
docs/: index.html  quickpbsa_agheine.html
python/builds/: quickpbsa_agheine.whl
python/src/quickPBSA integration/: debug.py  pyproject.toml
python/src/quickPBSA integration/quickPBSA_agheine/: __init__.py  __main__.py  quickPBSA notebook.ipynb  quickPBSA_bugfix.py
python/src/quickPBSA integration/quickPBSA_agheine/src/: .gitignore  quickPBSA notebook.ipynb
